// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all markers 1`] = `
Array [
  <Localized
    id="moderate-marker-preMod"
    key="0"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Pre-Mod
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-link"
    key="1"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Link
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-bannedWord"
    key="2"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Banned Word
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-suspectWord"
    key="3"
  >
    <withPropsOnChange(Marker)
      color="error"
      variant="filled"
    >
      Suspect Word
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-spam"
    key="4"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Spam
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-toxic"
    key="5"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Toxic
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-karma"
    key="6"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Karma
    </withPropsOnChange(Marker)>
  </Localized>,
  <withPropsOnChange(Marker)
    color="error"
    key="7"
  >
    <Localized
      id="moderate-marker-offensive"
    >
      <span>
        Offensive
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      2
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>,
  <withPropsOnChange(Marker)
    color="error"
    key="8"
  >
    <Localized
      id="moderate-marker-spam"
    >
      <span>
        Spam
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      3
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>,
]
`;

exports[`renders some markers 1`] = `
Array [
  <Localized
    id="moderate-marker-preMod"
    key="9"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Pre-Mod
    </withPropsOnChange(Marker)>
  </Localized>,
  "",
  <Localized
    id="moderate-marker-bannedWord"
    key="10"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Banned Word
    </withPropsOnChange(Marker)>
  </Localized>,
  "",
  "",
  <Localized
    id="moderate-marker-toxic"
    key="11"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Toxic
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-karma"
    key="12"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Karma
    </withPropsOnChange(Marker)>
  </Localized>,
  <withPropsOnChange(Marker)
    color="error"
    key="13"
  >
    <Localized
      id="moderate-marker-offensive"
    >
      <span>
        Offensive
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      2
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>,
  "",
]
`;
